--- a/public/css/DropByCSS.css
+++ b/public/css/DropByCSS.css
@@ -236,6 +236,21 @@
   cursor: pointer;
 }
 
+.box2 input[type = "submit"] {
+  border: 0;
+  background: #233A4D;
+  display: inline-block;
+  text-align: center;
+  border: 2px solid #233A4D;
+  width: 125px;
+  height: 55px;
+  outline: none;
+  color: whitesmoke;
+  border-radius: 24px;
+  transition: 0.25s;
+  cursor: pointer;
+}
+
 .container {
-  background-color:#F3E8EE;
+  background-color: lightgray;
 }
