--- a/views/myEvents.handlebars
+++ b/views/myEvents.handlebars
@@ -1,6 +1,6 @@
 <html>
 {{> headers}}
-<body style="background-color: #F3E8EE;">
+<body style="background-color: #B7CECE;">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <div id="one">
 
@@ -36,7 +36,7 @@
       <a href="myEvents">My Events</a>
     </div>
 
-    <img src= "./images/Logo.png" style="width:50px;height:50px;">
+    <img src= "./images/DropByLogo.png" style="width:50px;height:50px;">
 
 
     </div>
